[package]
name = "runes-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.30.1", features = ["rand"] }
hex = "0.4.3"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde-hex = "0.1.0"
serde_json = { version = "1.0.81", features = ["preserve_order"] }
serde_with = "3.7.0"
serde_yaml = "0.9.17"
tokio = { version = "1.15", features = ["full"] }
anyhow = { version = "1.0.56", features = ["backtrace"] }
clap = { version = "4.4.2", features = ["derive"] }
rusqlite = "0.31.0"

[dev-dependencies]
pretty_assertions = "1.2.1"